wire up some solr queries
